--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "~0.19.10",
     "zustand": "^5.0.0-rc.2",
     "@shopify/react-native-skia": "1.2.3",
-    "expo-secure-store": "~13.0.2"
+    "expo-secure-store": "~13.0.2",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
