--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
+    "victory-native": "^41.4.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
