--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.56.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -34,11 +35,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
+    "uuid": "^10.0.0",
     "victory-native": "^41.4.0",
     "zustand": "^5.0.0-rc.2"
   },
@@ -48,6 +51,7 @@
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-native-svg-transformer": "^1.5.0",
