--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
     "victory-native": "^41.4.0",
