--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "1.2.3",
     "@tanstack/react-query": "^5.56.2",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
