--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,34 +1,84 @@
 annotated-types==0.7.0
 anyio==4.6.0
+black==23.9.1
+build==1.0.3
+CacheControl==0.13.1
 certifi==2024.8.30
+cffi==1.16.0
+charset-normalizer==3.3.2
+cleo==2.1.0
 click==8.1.7
+crashtest==0.4.1
+distlib==0.3.7
 dnspython==2.6.1
+dulwich==0.21.6
 email_validator==2.2.0
 fastapi==0.115.0
 fastapi-cli==0.0.5
+fastjsonschema==2.18.1
+filelock==3.13.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.2
 idna==3.10
+importlib-metadata==6.8.0
+installer==0.7.0
+itsdangerous==2.1.2
+jaraco.classes==3.3.0
 Jinja2==3.1.4
+keyring==24.2.0
+line-profiler==4.1.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+more-itertools==10.1.0
+msgpack==1.0.7
+mypy==1.5.1
+mypy-extensions==1.0.0
+orjson==3.9.7
+packaging==23.1
+pathspec==0.11.1
+pexpect==4.8.0
+pkginfo==1.9.6
+platformdirs==3.11.0
+poetry==1.7.0
+poetry-core==1.8.1
+poetry-plugin-export==1.6.0
+ptyprocess==0.7.0
+pycparser==2.21
 pydantic==2.9.2
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
 pydantic_core==2.23.4
 Pygments==2.18.0
 pymongo==4.9.1
+PyMuPDF==1.23.6
+PyMuPDFb==1.23.6
+PyMySQL==1.1.0
+pyproject_hooks==1.0.0
 python-dotenv==1.0.1
 python-multipart==0.0.11
 PyYAML==6.0.2
+rapidfuzz==3.5.2
+requests==2.31.0
+requests-toolbelt==1.0.0
 rich==13.8.1
+ruff==0.0.291
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.21
 starlette==0.38.6
+tomlkit==0.12.2
+trove-classifiers==2023.10.18
 typer==0.12.5
 typing_extensions==4.12.2
+ujson==5.8.0
+urllib3==2.0.7
 uvicorn==0.31.0
 uvloop==0.20.0
+virtualenv==20.24.6
 watchfiles==0.24.0
 websockets==13.1
+xattr==0.10.1
+zipp==3.17.0
