--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
     "victory-native": "^41.4.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
